added png images and fixing alignments

--- a/css/style.css
+++ b/css/style.css
@@ -5,64 +5,53 @@ body{
     }
     
     
-    header {
-        background: #022045;
-        top: 0;
-        position: fixed;
-        width: 100%;
-    
-    }
-    
-    header ::after {
-        content: "" ;
-        display: table;
-        clear: both;
-    }
-    
-    .logo {
-        float: left;
-        padding: 10px 15px;
-        display: block;
-       width: 120px;
-       height: 40px;
-       color: #FFFFFF;
-    }
-    header nav ul{
-        float:right;
-    }
-    header nav ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-    }
-    header  nav li {
-        display: inline-block;
-        margin-left: 50px;
-        margin-right: 50px;
-        padding-top: 20px;
-        padding-bottom: 10px;
-    
-        position: relative;
-    }
-    
-    
-    
-    
-    header  nav a {
-        color: #FFFFFF;
-        text-decoration: none;
-    }
-    
-    header  nav a:hover {
-        text-decoration: underline;
-        font-weight: bold;
-    }
-    
+    .header {
+      background-color: #1f1a1a;
+      box-shadow: 0 3px 5px 0.3px rgba(0,0,0,.24);
+      height: 56px;
+      position: fixed;
+      top: 0;
+      transform: translateZ(0);
+      width: 100%;
+      z-index: 9;
+  }
+  .lockup {
+    height: 21px;
+}
+header nav ul{
+  float:right;
+}
+header nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  color:white;
+  font-size:20px;
+  font-family:sans-serif;
+}
+header  nav li {
+  display: inline-block;
+  
+ 
+
+  position: relative;
+}
+nav ul li a{
+  color:white;
+  font-family: sans-serif;
+  font-size:15px;
+}
     
     .container_12{
-      margin-top:80px;
+      margin-top:40px;
     }
-  
+     .lockup--logo {
+      width: 150px;
+      height: 56px;
+  }
+  .wallpaper{
+    width:100%;
+  }
     /*.container{
         box-sizing: border-box;
         width: 100%;
@@ -128,7 +117,10 @@ body{
         
         padding: 3px;
        
-      }
+      } 
+       .main2 clearfix{
+         margin-top:0px;
+       }
       
        .main h3{
         font-size: 20x;
@@ -144,8 +136,8 @@ body{
         font-weight: 500;
         margin-top: 15px;
         line-height: 1.8;
-        color:#999;
-        font-family: 'lato',serif;
+        color:rgb(77, 55, 73);
+        font-family: sans-serif;
         text-align: justify;
       
       }
@@ -178,13 +170,13 @@ body{
         color:#333;
         text-align: center;
       }
-      .section1 p{
+      .section p{
         font-size:18px;
         font-weight: 500;
         margin-top: 15px;
         line-height: 1.8;
         color:#999;
-        font-family: 'lato',serif;
+        font-family: sans-serif;
         text-align: justify;
       
       }
@@ -217,13 +209,13 @@ body{
         color:#333;
         text-align: center;
       }
-      .section2 p{
-        font-size:18px;
+      .section p{
+        font-size:12px;
         font-weight: 500;
-        margin-top: 15px;
+        margin-top: 8px;
         line-height: 1.8;
         color:#999;
-        font-family: 'lato',serif;
+        font-family: sans-serif;
         text-align: justify;
       
       }
@@ -282,6 +274,10 @@ body{
       .img-first{
         float:left;width:15%;height:4%
       }
+      blockquote p{
+        font-size:12px;
+        font-family:sans-serif;
+      }
       .footer_p{text-align: left;font-size:1rem;color:white;}
      /* footer{
       
@@ -338,7 +334,10 @@ body{
       
       /* `Headings
       -----------------------*/
-      
+      .data{
+        color: #022045;
+        font-family: sans-serif;
+      }
       h1 {
         font-size: 25px;
       }
@@ -406,6 +405,7 @@ body{
       ----------------------------------------------------------------------------------------------------*/
       
       .container_12 {
+        
         margin-left: auto;
         margin-right: auto;
         width: 960px;
@@ -742,69 +742,110 @@ body{
       }
       
       h3{
-        font-family: 'Courier New', Courier, monospace;
+        font-family: sans-serif;
         color:white;
       }
       
     /* --------footer---------- */
     
-    footer {
-        width: 100%;
-        background-color: #1e2022;
-        padding: 50px 0;
-        bottom: 0;
-    /*     position: fixed; */
-    }
-    
-    .social-icon {
-        display:block;
-       width: 20px;
-       height: 20px;
-    }
-    
-    footer nav ul {
-        color:black;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-    }
-    footer  nav li {
-        display: inline-block;
-        margin-left: 1px;
-        padding-top: 13px;
-        position: relative;
-    }
-    footer{
-        width:100%;
-    }
-    
-    footer sec{
-        background-color:black;
-        width:100;
-    }
-    
-    
-    footer  nav a {
-        color:blue;
-        text-decoration: none;
-        /* text-transform: uppercase; */
-    }
-    
-    
-    footer  nav a:hover {
-        text-decoration: underline;
-    
-    }
-    
-    
-    footer  nav a {
-        color:blue;
-        text-decoration: none;
-        /* text-transform: uppercase; */
-    }
-    
-    
-    footer  nav a:hover {
-        text-decoration: underline;
-    
-    }
+  
+/*footer*/
+.footer1-main-div{
+  width:100%;
+  height:auto;
+  margin:auto;
+  background: black;
+  padding:20px 0px;
+}
+.footer1-social-icons{
+  width:100%;
+  height:auto;
+  margin:auto;
+}
+.footer1-social-icons ul{
+  margin:0px;
+  padding:0px;
+  text-align:center;
+}
+.footer1-social-icons ul li{
+  display:inline-block;
+  width:50px;
+  height:50px;
+  margin:0px 10px;
+  border-radius:100%;
+  background:#32CD32;
+
+}
+.footer1-social-icons ul li a{
+  color:#272727;
+  font-size:25px;
+}
+.footer1-social-icons ul li a i{
+  line-height:50px;
+}
+.footer1-menu-one{
+  width:100%;
+  height:auto;
+  margin:auto;
+}
+.footer1-menu-one ul{
+  margin:0px;
+  padding:0px;
+  text-align:center;
+}
+.footer1-menu-one ul li{
+  display:inline-block;
+  margin:0px 20px;
+}
+.footer1-menu-one ul li a{
+  font-family:sans-serif;
+  font-size:15px;
+  font-weight:600;
+  color:#fff;
+  text-transform:uppercase;
+  text-decoration:none;
+  letter-spacing:1px;
+}
+.footer1-menu-two{
+  width:100%;
+  height:auto;
+  margin:auto;
+}
+.footer1-menu-two ul{
+  margin:0px;
+  padding:0px;
+  text-align:center;
+}
+.footer1-menu-two ul li{
+  display:inline-block;
+  margin:0px 20px;
+}
+.footer1-menu-two ul li a{
+  font-family:sans-serif;
+  font-size:15px;
+  font-weight:600;
+  color:#fff;
+  text-transform:uppercase;
+  text-decoration:none;
+  letter-spacing:1px;
+}
+.footer1-bottom{
+  width:100%;
+  height:auto;
+  margin:auto;
+  background:black;
+  padding:10px;
+
+}
+  
+.footer1-bottom p{
+  font-family:arial;
+  font-size:14px;
+  text-align:center;
+  color:#fff;
+ font-weight:600;
+ letter-spacing:1px;
+}
+.footer1-bottom p a{
+  color:#fff;
+}
